# keith

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/superpowers/plans/: 2026-04-03-keith-cli.md  2026-05-04-stats-command.md
docs/superpowers/specs/: 2026-04-03-keith-cli-design.md  2026-05-04-stats-command-design.md
src/keith/: cli.py  commands.py  db.py  editor.py  export.py  models.py  repl.py
tests/: test_commands.py  test_db.py  test_editor.py  test_export.py  test_integration.py  test_models.py  test_notes.py  test_search.py
