[project]
name = "keith"
version = "0.1.0"
description = "CLI tool for writing and organizing books"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0",
    "click>=8.0",
]

[project.scripts]
keith = "keith.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keith"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
